# AIS_OBS_Project

./: README.md  apply_fixes.sh  check_system.sh  install.sh  nav2_params_dwa.yaml  nav2_params_teb.yaml  run_scenario.sh
Documents/: OBS-3 Isl Bon FinalReport.doc  OBS-3 Isl Bon Presentation.pptx
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/costmap_converter/include/costmap_converter/: costmap_converter_interface.h  costmap_to_lines_convex_hull.h  costmap_to_lines_ransac.h  costmap_to_polygons.h  costmap_to_polygons_concave.h  misc.h
ros2_ws/install/costmap_converter/include/costmap_converter/costmap_to_dynamic_obstacles/: background_subtractor.h  blob_detector.h  costmap_to_dynamic_obstacles.h
ros2_ws/install/costmap_converter/share/costmap_converter/: costmap_converter_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/costmap_converter/share/costmap_converter/environment/: library_path.dsv  (+2 more)
ros2_ws/install/costmap_converter_msgs/share/costmap_converter_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/obs3_navigation/share/obs3_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/teb_local_planner/include/teb_local_planner/: distance_calculations.h  equivalence_relations.h  graph_search.h  h_signature.h  homotopy_class_planner.h  homotopy_class_planner.hpp  misc.h  obstacles.h  optimal_planner.h  planner_interface.h  pose_se2.h  recovery_behaviors.h  robot_footprint_model.h  teb_config.h  teb_local_planner_ros.h  timed_elastic_band.h  timed_elastic_band.hpp  visualization.h  visualization.hpp
ros2_ws/install/teb_local_planner/lib/teb_local_planner/: cmd_vel_to_ackermann_drive.py
ros2_ws/install/teb_local_planner/share/teb_local_planner/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml  teb_local_planner_plugin.xml
ros2_ws/install/teb_msgs/share/teb_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/teb_obstacle_avoidance/lib/teb_obstacle_avoidance/: collect_metrics.py  dynamic_obstacle_spawner.py  goal_sender.py
ros2_ws/install/teb_obstacle_avoidance/share/teb_obstacle_avoidance/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/obs3_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/obs3_navigation/config/: nav2_params.yaml
ros2_ws/src/obs3_navigation/launch/: navigation.launch.py
ros2_ws/src/teb_obstacle_avoidance/: CMakeLists.txt  package.xml
ros2_ws/src/teb_obstacle_avoidance/config/: nav2_params_dwa.yaml  nav2_params_teb.yaml
ros2_ws/src/teb_obstacle_avoidance/launch/: nav_simulation.launch.py
ros2_ws/src/teb_obstacle_avoidance/maps/: map.yaml
ros2_ws/src/teb_obstacle_avoidance/scripts/: collect_metrics.py  dynamic_obstacle_spawner.py  goal_sender.py  run_experiments.sh
ros2_ws/src/teb_obstacle_avoidance/teb_obstacle_avoidance/: __init__.py
ros2_ws/src/teb_obstacle_avoidance/worlds/: scenario_dynamic.world  scenario_mixed.world  scenario_narrow.world  scenario_static.world
(+204 files in other folders)
