<?xml version="1.0"?>
<package format="3">
  <name>obs3_navigation</name>
  <version>0.1.0</version>
  <description>OBS-3: TEB vs DWA obstacle avoidance for autonomous navigation</description>
  <maintainer email="islam.md-mushfiqul@stud.fra-uas.de">Md Mushfiqul Islam</maintainer>
  <maintainer email="rezoyana.bonna@stud.fra-uas.de">Rezoyana Islam Bonna</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
