<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teb_obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>
    OBS-3: Obstacle avoidance in autonomous navigation with ROS 2.
    Implements and compares TEB vs DWA local planners using TurtleBot3
    in Gazebo Classic across four simulation scenarios.
  </description>

  <maintainer email="islam.md-mushfiqul@stud.fra-uas.de">Md Mushfiqul Islam</maintainer>
  <maintainer email="rezoyana.bonna@stud.fra-uas.de">Rezoyana Islam Bonna</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
